lib/bait/tests/inout_error/enum/default_lower.out
lib/bait/tests/inout_error/enum/default_lower.in.bt:5:6 error: enum field value must be greater than previous field
