lib/bait/tests/inout_error/enum/default_lower.in.bt
enum NumbersMixed {
	zero
	ten := 10
	eleven
	three := 3
}
